# obsidian-rust-mcp

./: .gitignore  Cargo.toml  LICENSE  README.md  README_CN.md  write-note-tips.md
.github/workflows/: release.yml
src/: main.rs
